--- a/.env.example
+++ b/.env.example
@@ -4,11 +4,7 @@ APP_VERSION=1.0.0
 APP_PORT=3000
 APP_ENV=development
 APP_REQUEST_TIMEOUT=30s
-
-# CORS Configuration
-# For development: Use "*" to allow all origins
-# For production: Specify allowed origins separated by commas (e.g., "https://example.com,https://app.example.com")
-CORS_ALLOWED_ORIGINS=*
+APP_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8080
 
 # Database (PostgreSQL)
 DB_HOST=localhost
